--- a/src/main/resources/com/embyhelper/view/login-view.fxml
+++ b/src/main/resources/com/embyhelper/view/login-view.fxml
@@ -1,14 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="$CONTROLLER_NAME$"
-            prefHeight="400.0" prefWidth="600.0" >
+<VBox alignment="CENTER" spacing="15.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/20"
+      fx:controller="com.embyhelper.view.LoginView">
 
-</AnchorPane>
+    <padding>
+        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+    </padding>
+
+    <Label text="%login.title">
+        <font><Font name="System Bold" size="20.0" /></font>
+    </Label>
+
+    <Label text="%login.label.server" styleClass="label" />
+    <TextField fx:id="txtServerAddress" promptText="http://localhost:8096/emby" />
+
+    <Label text="%login.label.apiKey" styleClass="label" />
+    <TextField fx:id="txtApiKey" promptText="API Key của bạn" />
+
+    <Label text="%login.label.username" styleClass="label" />
+    <TextField fx:id="txtUsername" text="admin" />
+
+    <Label text="%login.label.password" styleClass="label" />
+    <PasswordField fx:id="txtPassword" />
+
+    <Button fx:id="btnConnect" onAction="#onConnectButtonClick" text="%login.button.connect" />
+
+    <Label fx:id="lblStatus" text="%login.status.notConnected" textFill="#e0e0e0" />
+</VBox>
